soup-session: fix memory leak

Do not steal the stream from the GTask, otherwise its destruction
method will never run and it will be leaked.

https://bugzilla.gnome.org/show_bug.cgi?id=696594